# DidacticDataMining

./: README.md  pyproject.toml
src/didactic_datamining/: __init__.py  datasets.py  didactic_classificationtree.py  didactic_dbscan.py  didactic_kmeans.py  utils.py
tutorial/: tutorial.ipynb
